crates/spelldawn/tests/it/core/snapshots/it__core__action_tests__connect.snap
---
source: crates/spelldawn/tests/it/core/action_tests.rs
assertion_line: 34
expression: "Summary::run(&response)"
---

    UpdateGameView: 
        user: 
            side: Overlord
            player_info: 
                name: "Test Overlord Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 999
            action_tracker: 3
            score: 0
            can_take_action: true
        opponent: 
            side: Champion
            player_info: 
                name: "Test Champion Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 999
            action_tracker: 0
            score: 0
            can_take_action: false
        raid_active: false
    CreateOrUpdateCard: 
        card: 
            card_id: O0
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Overlord Identity"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: false
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_position: 
            sorting_key: 0
            position: ObjectPositionIdentity { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C0
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Champion Identity"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: false
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_position: 
            sorting_key: 0
            position: ObjectPositionIdentity { owner: Opponent }
        create_animation: Unspecified
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
    RenderInterface: 
    panels: "<DebugPanel>"
