crates/spelldawn/tests/it/core/snapshots/it__core__action_tests__gain_mana.snap
---
source: crates/spelldawn/tests/it/core/action_tests.rs
assertion_line: 185
expression: "Summary::run(&response)"
---

command_list: 
    UpdateGameView: 
        user: 
            side: Overlord
            mana: 6
            action_tracker: 2
            can_take_action: true
        raid_active: false
channel_response: 
    UpdateGameView: 
        opponent: 
            side: Overlord
            mana: 6
            action_tracker: 2
            can_take_action: true
        raid_active: false
